--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,11 @@ max-width: 992px;
 margin: auto;
 }
 h1,h2,h3,h4,h5,h6 {
-margin-top: 0px;
-margin-bottom: 0px;
-
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+h2 {
+    font-size: 15px;
 }
 p {
 margin-top: 0px;
@@ -144,6 +146,15 @@ div.filterRelou {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+}
+div.filterRelou a {
+    text-decoration: none;
+    filter:drop-shadow(0px 0px 1px gray);
+}
+div.filterRelou a:hover {
+    filter:drop-shadow(1px 1px 1px black);   
+    transition: 500ms ease-in-out 300ms;
 }
 div.filter {
     display: flex;
@@ -215,6 +226,7 @@ display: flex;
 div.cardImgB3 {
 background-color: pink;
 }
+
 div.cardImgB3 img {
 height: 100px;
 object-fit: cover;
