--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,18 @@
 
 
 html {
-font-family: 'Raleway', sans-serif;
+    font-family: 'Raleway', sans-serif;
 }
 :root {
---color1: #0065FC;
---color2: #DEEBFF;
---color3: #F2F2F2;
+    --color1: #0065FC;
+    --color2: #DEEBFF;
+    --color3: #F2F2F2;
 }
 
 body {
-background-color: whitesmoke;
-max-width: 992px;
-margin: auto;
+    background-color: whitesmoke;
+    max-width: 992px;
+    margin: auto;
 }
 h1,h2,h3,h4,h5,h6 {
     margin-top: 0px;
@@ -23,70 +23,70 @@ h2 {
     font-size: 15px;
 }
 p {
-margin-top: 0px;
-margin-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 div#container1 {
-background-color: #F2F2F2;
-display: grid;
-grid-template-columns: 1fr;
-/*grid-template-rows: 0.2fr 6fr 1fr;*/
-grid-template-rows: 0.2fr 2fr 0.2fr;
-grid-template-areas:
-"navBar"
-"main"
-"basDePage";
-height: 100vh;
+    background-color: #F2F2F2;
+    display: grid;
+    grid-template-columns: 1fr;
+    /*grid-template-rows: 0.2fr 6fr 1fr;
+    grid-template-rows: 0.2fr 2fr 0.2fr;*/
+    grid-template-areas:
+    "navBar"
+    "main"
+    "basDePage";
+    height: 100vh;
 }
 header.navBar{
-background-color: turquoise;
+    background-color: turquoise;
 }
 
 div.headContainer {
-background-color: red;
-display: flex;
+    background-color: red;
+    display: flex;
 }
 div.logo {
-background-color: #F2F2F2;
-display: flex;
-/*object-fit: cover;
-background-image: url("../images/logo/Booki.png");
-background-size: contain;
-background-repeat: no-repeat;*/
+    background-color: #F2F2F2;
+    display: flex;
+    /*object-fit: cover;
+    background-image: url("../images/logo/Booki.png");
+    background-size: contain;
+    background-repeat: no-repeat;*/
 }
 div.logo img{
-width: 100%;
-height: 100px;
+    width: 100%;
+    height: 100px;
 }
 div.hybrid {
-background-color: #F2F2F2;
-flex-grow: 2;
+    background-color: #F2F2F2;
+    flex-grow: 2;
 }
 div.hebergementBar {
-background-color: grey;
-display: flex;
+    background-color: grey;
+    display: flex;
 }
 div.hebergementBar a {
-color: black;
-text-decoration:none;
-margin-right: 20px;
-padding-top: 40px;
-border-top: 3px solid transparent;
+    color: black;
+    text-decoration:none;
+    margin-right: 20px;
+    padding-top: 40px;
+    border-top: 3px solid transparent;
 }
 div.hebergementBar a:hover {
-color: #0065FC;
-border-top: 3px solid blue;
+    color: #0065FC;
+    border-top: 3px solid blue;
 }
 main#container2 {
-background-color: purple;
-display: grid;
-grid-template-columns: 1fr;
-/*grid-template-rows: 0.5fr 3fr;*/
-grid-template-rows: 0.1fr 2fr 0.1fr;
-grid-template-areas:
-"section"
-"articles";
-grid-area: main;
+    background-color: purple;
+    display: grid;
+    grid-template-columns: 1fr;
+    /*grid-template-rows: 0.5fr 3fr;
+    grid-template-rows: 0.1fr 2fr 0.1fr;*/
+    grid-template-areas:
+    "section"
+    "articles";
+    grid-area: main;
 }
 section#filtersContainer {
     background-color: #F2F2F2;
@@ -101,55 +101,57 @@ div.rechercheBarMobile {
     display: none;
 }
 div.buttonLocalisationIcon {
-background-color: lightgrey;
-display: flex;
-width: 7%;
-height: 50px;
-border-radius: 10px 0px 0px 10px;
-align-items: center;
-display: flex;
-align-items: center;
-justify-content: center;
+    background-color: lightgrey;
+    display: flex;
+    width: 7%;
+    height: 50px;
+    border-radius: 10px 0px 0px 10px;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 input.searchBar{
-height: 50px;
-display: flex;
-align-items: center;
-justify-content: center;
-border: none;
-padding: 20px;
-border-top: 0.5px solid lightslategray;
-border-bottom: 0.5px solid lightslategray;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    padding: 20px;
+    border-top: 0.5px solid lightslategray;
+    border-bottom: 0.5px solid lightslategray;
 }
 div.buttonResearch {
-width: 150px;
-height: 50px;
-background-color: #0065FC;
-color: #DEEBFF;
-border-radius: 0px 10px 10px 0px;
-display: flex;
-align-items: center;
-justify-content: center;
-cursor: pointer;
+    width: 150px;
+    height: 50px;
+    background-color: #0065FC;
+    color: #DEEBFF;
+    border-radius: 0px 10px 10px 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 }
 div.buttonResearch:hover {
-background-color: #DEEBFF;
-color: #0065FC;
-border-radius: 10px;
+    background-color: #DEEBFF;
+    color: #0065FC;
+    border-radius: 10px;
 }
 div.filters {
-background-color: #F2F2F2;
-display: flex;
-align-items: center;
+    background-color: #F2F2F2;
+    display: flex;
+    align-items: center;
+}
+div.filters a {
+    text-decoration: none;
 }
 div.filterRelou {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    padding: 5px;
 }
 div.filterRelou a {
-    text-decoration: none;
     filter:drop-shadow(0px 0px 1px gray);
 }
 div.filterRelou a:hover {
@@ -162,7 +164,8 @@ div.filter {
     border: 2px solid lightgrey;
     align-items: center;
     justify-content: center;
-    margin: 10px;
+    margin: 5px;
+    padding-right: 7px;
     border-radius: 20px;
 }
 div.filter i {
@@ -178,93 +181,86 @@ div.filter i {
     margin-top: -2px;
     margin-bottom: -2px;
 }
-div.filter a {
-    text-decoration: none;
-}
 div.filter a:hover {
-    background-color: #F2F2F2;
+    background-color: red;
 }
 div.headInformation {
-background-color: #F2F2F2;
-display: flex;
-align-items: center;
+    background-color: #F2F2F2;
+    display: flex;
+    align-items: center;
 }
 div.infomationIcon {
-display: flex;
-align-items: center;
-justify-content: center;
-color: #0065FC;
-width: 25px;
-height: 25px;
-border: 1px solid lightgray;
-border-radius: 25px;
-margin-right: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0065FC;
+    width: 25px;
+    height: 25px;
+    border: 1px solid lightgray;
+    border-radius: 25px;
+    margin-right: 5px;
 }
 article#container3 {
-background-color: lightgreen;
-display: grid;
-/*grid-template-rows: 1fr 1fr;*/
-grid-template-rows: 0.2fr 0.5fr;
-grid-template-areas:
-"article1 article2"
-"article3 article3";
-grid-area: articles;
-margin: 10px;
-padding: 10px;
+    background-color: lightgreen;
+    display: grid;
+    /*grid-template-rows: 1fr 1fr;
+    grid-template-rows: 0.2fr 5fr;*/
+    grid-template-areas:
+    "article1 article2"
+    "article3 article3";
+    grid-area: articles;
+    margin: 10px;
+    padding: 10px;
 }
 section.article1 {
-background-color: gray;
-grid-area: article1;
-border-radius: 15px;
-margin: 10px;
-padding: 10px;
+    background-color: blueviolet;
+    grid-area: article1;
+    border-radius: 15px;
+    margin: 10px;
+    padding: 10px;
 }
 div.artcile1Part1 {
-background-color: lightgray;
-display: flex;
+    background-color: red;
+    display: flex;
 }
-div.cardImgB3 {
-background-color: pink;
-}
-
-div.cardImgB3 img {
-height: 100px;
-object-fit: cover;
+div.artcile1Part1 h4{
+    text-size-adjust: 20px;
+    font-size: 12px;
 }
 div.cardTextB3 {
-background-color: beige ;
+    background-color: beige ;
 }
 div.starEvaluation {
-display: flex;
+    display: flex;
 }
 div.starFullIcon {
-display: flex;
-height: 10px;
-width: 10px;
-color: #0065FC;
-margin-right: 10px;
+    display: flex;
+    height: 10px;
+    width: 10px;
+    color: #0065FC;
+    margin-right: 10px;
 }
 div.startEmptyIcon {
-display: flex;
-color: pink;
-margin-right: 10px;
+    display: flex;
+    color: pink;
+    margin-right: 10px;
 }
 div.artcile1Part2 {
-background-color: darkseagreen;
-display: flex;
+    background-color: darkseagreen;
+    display: flex;
 }
 aside.article2 {
-background-color: indianred;
-grid-area: article2;
-border-radius: 15px;
-margin: 15px;
-padding: 5px;
+    background-color: indianred;
+    grid-area: article2;
+    border-radius: 15px;
+    margin: 15px;
+    padding: 5px;
 }
 div.artcile2Title {
-background-color: darksalmon;
-display: flex;
-justify-content: space-evenly;
-padding: 3px;
+    background-color: darksalmon;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 3px;
 }
 div.populaireImg6 {
     object-fit: cover;
@@ -272,6 +268,50 @@ div.populaireImg6 {
     height: 160px;
     border-radius: 15px 0 0 15px ;
 }
+
+section.article3 {
+background-color: darkslateblue;
+grid-area: article3;
+}
+div.article3cards {
+background-color: black;
+display: flex;
+justify-content: space-around;
+}
+div.artcile3Part1 {
+display: flex;
+}
+div.artcile3Part2 {
+display: flex;
+}
+div.artcile3Relou {
+background-color: wheat;
+}
+/*CARDS start*/
+div.cards {
+    background-color: white;
+    margin: 8px;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: hotpink;
+}
+/*img.cardImgB3 {
+    object-fit: cover;
+    width: 150%;
+    border-radius: 15px 15px 0 0;
+}*/
+div.cardImgB3 img {
+    width: 80%;
+    height: 100px;
+    object-fit: cover;
+}
+/*
+img.hebergementImg1 {
+    object-fit: cover;
+    width: 100%;
+    height: 120px;
+    border-radius: 15px 15px 0 0;
+}*/
 div.cardsWithIcon {
 background-color: blue;
 display: flex;
@@ -287,67 +327,6 @@ flex-direction: column;
 justify-content: space-evenly;
 padding: 3px;
 border-radius: 10px;
-}
-section.article3 {
-background-color: darkslateblue;
-grid-area: article3;
-}
-div.article3cards {
-background-color: black;
-display: flex;
-justify-content: space-around;
-}
-
-div.artcile3Part1 {
-display: flex;
-}
-div.artcile3Part2 {
-display: flex;
-}
-div.artcile3Relou {
-background-color: wheat;
-}
-div.cards {
-background-color: white;
-margin: 8px;
-padding: 5px;
-border-radius: 10px;
-}
-img.hebergementImg1 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 15px 0 0;
-}
-img.hebergementImg2 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 15px 0 0;
-}
-img.hebergementImg3 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 15px 0 0;
-}
-img.hebergementImg4 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 15px 0 0;
-}
-img.hebergementImg5 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 15px 0 0;
-}
-img.hebergementImg6 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 15px 0 0;
 }
 img.populaireImg1 {
     object-fit: cover;
@@ -366,9 +345,6 @@ img.populaireImg3 {
     width: 55%;
     height: 120px;
     border-radius: 15px 0 0 15px ;
-}
-div.cards {
-    background-color: darkslategrey;
 }
 img.activiteImg1 {
     object-fit: cover;
@@ -413,9 +389,15 @@ div.cardTextB5 {
 background-color: hotpink;
 }
 footer.basDePage {
-background-color: gray;
-grid-area: basDePage;
-display: flex;
+    background-color: gray;
+    grid-area: basDePage;
+    display: flex;
+}
+footer.basDePage a {
+    text-decoration: none;
+}
+footer.basDePage ul{
+    list-style-type: none;
 }
 div.footInfo {
 background-color: lightpink;
@@ -448,8 +430,8 @@ flex: 1;
     @media screen and (max-width: 768px) {
     article#container3 {
         grid-template-columns: 1fr;
-        /*grid-template-rows: repeat(3, 1fr);*/
-        grid-template-rows: repeat(3, 0.5fr);
+        /*grid-template-rows: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 0.5fr);*/
         grid-template-areas:
         "article2"
         "article1"
@@ -485,7 +467,7 @@ flex: 1;
     }
     main#container2 {
         background-color: brown;
-        grid-template-rows: 0.1fr ;
+        /*grid-template-rows: 0.1fr ;*/
      }
     div.hybrid {
         display: none;
@@ -534,6 +516,9 @@ flex: 1;
         justify-content: center;
         background-color: #DEEBFF;
         flex-direction: column;
+    }
+    div.filters h2 {
+        font-size: 25px;
     }
     div.filterRelou {
         justify-content: center;
