--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ html {
 body {
     background-color: whitesmoke;
     max-width: 992px;
+   /* max-width: 1000px;*/
     margin: auto;
 }
 h1,h2,h3,h4,h5,h6 {
@@ -27,7 +28,6 @@ p {
     margin-bottom: 0px;
 }
 div#container1 {
-    background-color: #F2F2F2;
     display: grid;
     grid-template-columns: 1fr;
     /*grid-template-rows: 0.2fr 6fr 1fr;
@@ -39,28 +39,26 @@ div#container1 {
     height: 100vh;
 }
 header.navBar{
-    background-color: turquoise;
+    background-color: none;
 }
 div.headContainer {
-    background-color: red;
     display: flex;
+    margin-bottom: 30px;
+    align-items: center;
 }
 div.logo {
-    background-color: #F2F2F2;
     display: flex;
 }
-div.logo img {/*
-    position: relative;
-    left: 10px;*/
-    width: 80%;
+div.logo img {
+    padding-left: 10px;
+    width: 100%;
     height: 50px;
+    padding-top: 10px;
 }
 div.hybrid {
-    background-color: #F2F2F2;
     flex-grow: 2;
 }
 div.hebergementBar {
-    background-color: grey;
     display: flex;
 }
 div.hebergementBar a {
@@ -75,7 +73,7 @@ div.hebergementBar a:hover {
     border-top: 3px solid blue;
 }
 main#container2 {
-    background-color: purple;
+    /*background-color: purple;*/
     display: grid;
     grid-template-columns: 1fr;
     /*grid-template-rows: 0.5fr 3fr;*/
@@ -90,14 +88,18 @@ section#filtersContainer {
     grid-area: section;
 }
 section#filtersContainer h1 {
-    font-size: 20px;
+    font-size: 15px;
     margin-bottom: 10px;
+}
+section#filtersContainer p {
+    font-size: 12px;
 }
 div.rechercheBar {
     background-color: #F2F2F2;
     display: flex;
     padding-top: 10px;
     padding-bottom: 10px;
+    align-items: center;
 }
 div.rechercheBarMobile {
     display: none;
@@ -105,16 +107,16 @@ div.rechercheBarMobile {
 div.buttonLocalisationIcon {
     background-color: lightgrey;
     display: flex;
-    width: 7%;
-    height: 50px;
+    width: 60px;
+    height: 40px;
     border-radius: 10px 0px 0px 10px;
-    align-items: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 0.5px solid lightgrey;
 }
-input.searchBar{
-    height: 50px;
+input.searchBar {
+    height: 38px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -124,8 +126,8 @@ input.searchBar{
     border-bottom: 0.5px solid lightslategray;
 }
 div.buttonResearch {
-    width: 150px;
-    height: 50px;
+    width: 120px;
+    height: 40px;
     background-color: #0065FC;
     color: #DEEBFF;
     border-radius: 0px 10px 10px 0px;
@@ -133,6 +135,7 @@ div.buttonResearch {
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    border: 0.5px solid #0065FC
 }
 div.buttonResearch:hover {
     background-color: #DEEBFF;
@@ -154,22 +157,23 @@ div.filterRelou {
     align-items: center;
     justify-content: center;
 }
-div.filterRelou a {
-    filter:drop-shadow(0px 0px 1px gray);
-}
 div.filterRelou a:hover {
-    filter:drop-shadow(1px 1px 1px black);   
+    filter:drop-shadow(1px 1px 1px black);
     transition: 500ms ease-in-out 300ms;
 }
 div.filter {
     display: flex;
-    background-color: gold;
+    color: black;
     border: 2px solid lightgrey;
     align-items: center;
     margin: 10px;
     padding-right: 10px;
     border-radius: 20px;
     font-weight: bold;
+}
+div.filter:hover {
+    filter:drop-shadow(1px 1px 1px black);   
+    transition: 500ms ease-in-out 300ms;
 }
 div.filter i {
     display: flex;
@@ -186,13 +190,12 @@ div.filter i {
     position: relative;
     left: -5px;
 }
-div.filter a:hover {
-    background-color: red;
-}
 div.headInformation {
     background-color: #F2F2F2;
     display: flex;
     align-items: center;
+    padding-bottom: 25px;
+    font-size: 15px;
 }
 div.infomationIcon {
     display: flex;
@@ -205,50 +208,61 @@ div.infomationIcon {
     border-radius: 25px;
     margin-right: 5px;
 }
-
 div#container3 {
-    background-color: lightgreen;
+    /*background-color: lightgreen;*/
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas:
     "article1 article2"
     "article3 article3";
     grid-area: articles;
-    margin: 10px;
-    padding: 10px;
+    grid-gap: 20px;
+    margin: 0px;
+    padding: 0px;
 }
 
 section.article1 {
-    background-color: blueviolet;
+    background-color: lightgrey;
     grid-area: article1;
     border-radius: 15px;
-    margin: 10px;
-    padding: 10px;
+    margin: 0px;
+    padding: 15px;
+}
+section.article1 h2 {
+    margin-bottom: 20px;
+    font-size: 15px;
+}
+section.article1 h5 {
+    margin-top: 40px;
+    font-size: 13px;
 }
 div.artcile1Part1 {
-    background-color: red;
+   /* background-color: red;*/
     display: flex;
 }
 /*CARDS start*/
 div.cards {
-    background-color: hotpink;
+    background-color: white;
     margin: 8px;
     padding: 5px;
     border-radius: 10px;
     width: 30%;
-    height: 200px;
+    height: 150px;
 }
-img.cardImgB3 {
-    border-radius: 15px 15px 0 0;
+div.cards:hover {
+    background-color: white;
+    filter:drop-shadow(1px 1px 1px black);
 }
 div.cardImgB3 img {
     width: 100%;
     height: 100px;
     /*object-fit: cover;*/
+    border-radius: 15px 15px 0 0;
+    
 }
 div.artcile1Part1 h4 {
-    font-size: 12px;
+    font-size: 13px;
 }
 div.artcile1Part1 p {
     font-size: 10px;
@@ -268,32 +282,37 @@ div.starFullIcon {
 }
 i.starFullIcon {
     color: #0065FC;
+    margin-right: 0px;
+    font-size: 13px;
 }
 i.starFullIconGrey {
     color: grey;
+    margin-right: 0px;
+    font-size: 13px;
+}
+div.starFullIcon {
+    color: #0065FC;
+    margin-right: 13px;
+    font-size: 13px;
 }
 div.startEmptyIcon {
     display: flex;
     color: gray;
-    margin-right: 10px;
-    font-size: 10px;
 }
 div.artcile1Part2 {
     background-color: darkseagreen;
     display: flex;
 }
-div.artcile1Part2 h4 {
-    font-size: 12px;
-}
 div.artcile1Part2 p {
     font-size: 10px;
 }
 aside.article2 {
-    background-color: indianred;
+    background-color: lightgrey;
     grid-area: article2;
     border-radius: 15px;
-    margin: 15px;
-    padding: 5px;
+    margin: 0px;
+    padding: 15px;
+    min-width: 90%;
 }
 div.artcile2Title {
     background-color: darksalmon;
@@ -301,107 +320,155 @@ div.artcile2Title {
     padding: 3px;
 }
 div.artcile2Title h2 {
-    margin-left: 5px;
+    font-size: 15px;
 }
 div.artcile2Title i {
-    margin-left: 200px;
+    margin-left: 40%;
 }
 div.cardsWithIcon {
     background-color: blue;
     display: flex;
     /*justify-content: center;*/
-    margin: 8px;
+    margin: 5px;
+    margin-top: 10px;
+    margin-bottom: 25px;
     padding: 8px;
     border-radius: 20px;
     object-fit: cover;
+    /*min-width: 150px;*/
 }
-div.article2Img {
-    width: 100%;
-    height: 150px;
-    min-width: 100px;
-    object-fit: cover;
-    border-radius: 15px 0 0 15px;
+div.cardsWithIcon:hover {
+    background-color: white;
+    filter:drop-shadow(1px 1px 1px black);
 }
+/*
 div.cardsWithIcon img{
     width: 100%;
-    height: 150px;
+    height: 100px;
     object-fit: cover;
     border-radius: 15px 0 0 15px;
-}
+}*/
 div.cardDescripIcon {
     background-color: coral;
     display: flex;
     flex-direction: column;
     padding: 3px;
     border-radius: 10px;
+    height: 30px;
+}
+div.article2Img img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 15px 0 0 15px;
 }
 div.cardDescripIcon h3 {
+    font-size: 13px;
     margin-top: 0px;
     margin-bottom: 0px;
+    margin-left: 10px;
 }
 div.cardDescripIcon p {
-    margin-bottom: 50px;
+    font-size: 11px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 10px;
+}
+div.starEvaluation2 {
+    margin-left: 10px;
+    padding-top: 30px;
 }
 section#article3 {
     background-color: darkslateblue;
     grid-area: article3;
 }
+section#article3 h2{
+    padding-bottom: 15px;
+}
 div.article3cards {
-    background-color: lightgoldenrodyellow;
+    background-color: lightpink;
     display: flex;
     justify-content: space-around;
 }
 div.artcile3Part1 {
+    background-color: darkred;
     display: flex;
-    margin: 5px;
+    margin: 0px;
 }
-div.artcile3Part2 {
+div.cards3Solo {
     display: flex;
-    margin: 5px;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60%;
+    background-color: greenyellow;
+    width: 46%;
 }
-div.artcile3Relou {
-    background-color: wheat;
-    margin: 5px;
-    padding: 5px;
+div.cards3Solo:hover {
+    background-color: #DEEBFF;
+    filter:drop-shadow(1px 1px 1px black);
+}
+div.cards3SoloImg {
+    object-fit: cover;
+    width: 100%;
+    height: 300px;
+    border-radius: 15px 15px 0 0;
+}div.cards3 img {
+    object-fit: cover;
+    width: 100%;
+    height: 150px;
+    border-radius: 15px 15px 0 0;
+}
+div.cards3Solo img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+}
+div.cards3SoloText {
+    color: black;
+}
+div.cards3 {
+    background-color: darkcyan;
+}
+div.cards3:hover {
+    border-radius: 15px;
+    background-color: #DEEBFF;
+    filter:drop-shadow(1px 1px 1px black);
 }
 
-/*img.populaireImg1 {
-    object-fit: cover;
-    width: 100%;
-    height: 120px;
-    border-radius: 15px 0 0 15px ;
+div.artcile3Relou {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: peru ;
+   /* margin-right: 10px;
+    margin-left: 10px;*/
+    padding: 0px;
+    width: 46%;
 }
-img.populaireImg2 {
-    object-fit: cover;
-    width: 55%;
-    height: 130px;
-    border-radius: 15px 0 0 15px ;
+div.imgDuo1 {
+    height: 250px;
 }
-img.populaireImg3 {
-    object-fit: cover;
-    width: 55%;
-    height: 120px;
-    border-radius: 15px 0 0 15px ;
-}*/
-div.cards3Solo img {
-    object-fit: cover;
-    width: 100%;
-    height: 85%;
-    border-radius: 15px 15px 0 0;
+div.imgDuo1 img {
+    height: 100%;
 }
-div.cards3 img{
-    object-fit: cover;
-    width: 100%;
-    height: 200px;
-    border-radius: 15px 15px 0 0;
+div.imgDuo2 {
+    height: 115px;
+}
+div.imgDuo2 img {
+    height: 100%;
 }
 div.cardImgB5 {
 background-color: darkslategray;
 }
-
 div.cardTextB5 {
-    background-color: hotpink;
+    background-color: gold ;
 }
+div.artcile3Part2 {
+    background-color: magenta;
+    display: flex;
+    margin: 0px;
+}
+/*BAS DE PAGE*/
 footer.basDePage {
     background-color: gray;
     grid-area: basDePage;
@@ -456,13 +523,15 @@ div.footInfo {
         background-color: #DEEBFF;
     }
     div.headContainer {
-        background-color: aquamarine;
         flex-direction: column;
+        align-items: unset;
+        justify-content: space-evenly;
     }
     div.logo {
-        background-color: darkorchid;
         justify-content: center;
-        height: 100px;
+        width: 100%;
+        height: 80px;
+        margin-left: 35px;
         /*background-image: url("../images/logo/Booki@3x.png");*/
     }
     div.logo img {
@@ -471,14 +540,19 @@ div.footInfo {
     }
     div.hebergementBar {
         display: flex;
-        justify-content: space-evenly; 
+        justify-content: space-evenly;
+        text-align: center;
     }
     div.hebergementBar a {
-        border-top: none;
-        text-align: center;        
-        width: 100%;
-        border-bottom: 3px solid transparent;
+        border-bottom: 3px solid lightgray;
+        margin-right: 0px;
         padding-bottom: 20px;
+    }
+    a.navBar1 {
+        width: 50%;
+    }
+    a.navBar2 {
+        width: 50%;
     }
     div.hebergementBar a:hover {
         border-top: none;
@@ -491,7 +565,6 @@ div.footInfo {
     div.hybrid {
         display: none;
     }
-    
     div.rechercheBar {
         display: none;
     }
@@ -510,7 +583,7 @@ div.footInfo {
         align-items: center;
         justify-content: center;
         cursor: pointer;
-        border-radius: 10px;
+        border-radius:  0px 10px 10px 0px;
     }
     input.searchBarMobile{
         width: 70%;
@@ -569,17 +642,36 @@ div.footInfo {
     div.cardsWithIcon {
         width: unset;
     }
-    div.cardsWithIcon img{
-        width: 30%;
+    div.cardDescripIcon {
+        width: 50%;
+        height: 200px;
     }
-    div.cardDescripIcon{
-        width: 70%;
+    div.article2Img {
+        width: 40%;
+        height: 200px;
+        object-fit: cover;
+        border-radius: 15px 0 0 15px;
+    }
+    div.article2Img img{
+        background-color: crimson;
+        width: 100%;
+        height: 200px;
     }
     div.article3cards {
         flex-direction: column;
     }
     div.artcile3Part1 {
         flex-direction: column;
+    }
+    /*div.cards3Solo {
+        flex-direction: column;
+    }*/
+    div.cards3SoloImg {
+        width: 100%;
+        height: 200px;
+    }
+    div.cards3SoloImg img{
+        width: 100%;
     }
     div.artcile3Part2 {
         flex-direction: column;
