--- a/css/style.css
+++ b/css/style.css
@@ -377,7 +377,6 @@ div.starEvaluation2Relou {
     padding-top: 35px;
 }
 section#article3 {
-    background-color: darkslateblue;
     grid-area: article3;
 }
 section#article3 h2{
@@ -400,6 +399,7 @@ div.cards3Solo {
     width: 60%;
     background-color: greenyellow;
     width: 46%;
+    border-radius: 15px;
 }
 div.cards3Solo:hover {
     background-color: #DEEBFF;
@@ -408,7 +408,7 @@ div.cards3Solo:hover {
 div.cards3SoloImg {
     object-fit: cover;
     width: 100%;
-    height: 300px;
+    height: 350px;
     border-radius: 15px 15px 0 0;
 }div.cards3 img {
     object-fit: cover;
@@ -423,6 +423,10 @@ div.cards3Solo img {
 }
 div.cards3SoloText {
     color: black;
+    padding: 5px;
+    padding-bottom: 15px;
+    font-size: 13px;
+    font-weight: bold;
 }
 div.cards3 {
     background-color: darkcyan;
@@ -432,39 +436,44 @@ div.cards3:hover {
     background-color: #DEEBFF;
     filter:drop-shadow(1px 1px 1px black);
 }
-
 div.artcile3Relou {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     background-color: peru ;
-   /* margin-right: 10px;
-    margin-left: 10px;*/
+    margin-left: 20px;
     padding: 0px;
     width: 46%;
 }
 div.imgDuo1 {
     height: 250px;
+    border-radius: 15px;
 }
 div.imgDuo1 img {
     height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
 }
 div.imgDuo2 {
     height: 115px;
 }
 div.imgDuo2 img {
     height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+    margin-top: 5px;
 }
 div.cardImgB5 {
-background-color: darkslategray;
+background-color: purple;
 }
 div.cardTextB5 {
-    background-color: gold ;
+    background-color: non;
+    
 }
 div.artcile3Part2 {
     background-color: magenta;
     display: flex;
-    margin: 0px;
+    margin-right: 0px;
+    padding-right: 0px;
 }
 /*BAS DE PAGE*/
 footer.basDePage {
@@ -474,16 +483,23 @@ footer.basDePage {
 }
 footer.basDePage a {
     text-decoration: none;
+    color: black;
+}
+footer.basDePage h4 {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
 }
 footer.basDePage ul{
     list-style-type: none;
     padding: 0;
+    margin: 0px;
 }
 div.footInfo {
-    background-color: lightpink;
+    background-color: lightgrey;
     display: flex;
     flex-direction: column;
     flex: 1;
+    padding: 20px;
 }
 /*Format tablette*/
 @media screen and (max-width: 992px) and (min-width: 769px) {
