Correction: artcile3 : boder radius of big image and display of Artcile3's part2

--- a/css/style.css
+++ b/css/style.css
@@ -473,6 +473,7 @@ div.cardTextB5 {
 div.artcile3Part2 {
     background-color: magenta;
     display: flex;
+    justify-content: space-between;
     margin-right: 0px;
     padding-right: 0px;
 }
