--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,7 @@ div#container3 {
     /*background-color: lightgreen;*/
     display: grid;
     grid-template-columns: 2fr 1fr;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 0.8fr;
     grid-template-areas:
     "article1 article2"
     "article3 article3";
@@ -376,8 +376,9 @@ div.starEvaluation2Relou {
     margin-left: 10px;
     padding-top: 35px;
 }
-/*Activités à Marseille Article 3*/
+/*Activités à Marseille Article 3!!!!!!!!!!!!!!!!!!!!!!!!!*/
 section#article3 {
+    background-color: grey;
     grid-area: article3;
 }
 section#article3 h2{
@@ -401,6 +402,7 @@ div.cards3Solo {
     background-color: greenyellow;
     filter: drop-shadow(0 0 0.15rem gray);
     width: 46%;
+    height: 350px;
     border-radius: 15px;
 }
 div.cards3Solo:hover {
@@ -409,12 +411,11 @@ div.cards3Solo:hover {
 }
 div.cards3SoloImg {
     width: 100%;
-    height: 300px;
 }
 div.cards3SoloImg img {
     object-fit: cover;
     width: 100%;
-    height: 300px;  
+    height: 310px;  
     border-radius: 15px 15px 0px 0px;
 }
 /*div.cards3 img {
@@ -430,27 +431,26 @@ div.cards3SoloText {
     font-size: 13px;
     font-weight: bold;
 }
-div.cards3 {
-    background-color: darkcyan;
-}
 div.cards3:hover {
     border-radius: 15px;
     background-color: #DEEBFF;
     filter:drop-shadow(1px 1px 1px black);
 }
 div.artcile3Relou {
+    background-color: royalblue;
     display: flex;
     flex-direction: column;
-    background-color: none ;
     margin-left: 20px;
     padding: 0px;
     width: 46%;
+    justify-content: space-between;
 }
 div.cards3Top {
     background-color: cornflowerblue;
     filter: drop-shadow(0 0 0.15rem gray);
-    margin-bottom: 5px;
+    margin-bottom: 15px;
     border-radius: 15px;
+    height: 190px;
 }
 div.cards3Top:hover {
     border-radius: 15px;
@@ -458,30 +458,42 @@ div.cards3Top:hover {
     filter:drop-shadow(1px 1px 1px black);
 }
 div.imgDuo1 {
-    height: 250px;
-    border-radius: 15px;
+    width: 100%;
+    height: 115px;
 }
 div.imgDuo1 img {
     width: 100%;
-    height: 200px;
+    height: 150px;
     object-fit: cover;
+    border-radius: 15px;
     border-radius: 15px 15px 0px 0px;
 }
-div.cards3DuoText {
-    padding: 10px;
+div.cards3Top p {
+    position: relative;
+    top: 35px;
     font-size: 13px;
     font-weight: bold;
+    padding: 10px;
 }
 div.cards3Bot {
     background-color: darkslateblue;
     filter: drop-shadow(0 0 0.15rem gray);
     margin-top: 5px;
+    margin-bottom: 0px;
     border-radius: 15px;
+    height: 140px;
 }
 div.cards3Bot:hover {
     border-radius: 15px;
     background-color: #DEEBFF;
     filter:drop-shadow(1px 1px 1px black);
+}
+div.cards3Bot p {
+    position: relative;
+    top: -10px;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 10px;
 }
 div.imgDuo2 {
     width: 100%;
@@ -489,7 +501,7 @@ div.imgDuo2 {
 }
 div.imgDuo2 img {
     width: 100%;
-    height: 100%;
+    height: 105px;
     object-fit: cover;
     border-radius: 15px;
     border-radius: 15px 15px 0px 0px;
@@ -500,16 +512,41 @@ div.artcile3Part2 {
     justify-content: space-between;
     margin-left: 20px;
 }
+div.cards3TopPart2 {
+    background-color: bisque;
+    filter: drop-shadow(0 0 0.15rem gray);
+    margin-bottom: 0px;
+    border-radius: 15px;
+    height: 180px;
+}
+div.cards3TopPart2 p {
+    position: relative;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 10px;
+}
 div.imgDuo3 {
     width: 100%;
-    height: 115px;
 }
 div.imgDuo3 img {
     width: 100%;
-    height: 100%;
+    height: 140px;
     object-fit: cover;
     border-radius: 15px;
     border-radius: 15px 15px 0px 0px;
+}
+div.cards3BotPart2 {
+    background-color: brown;
+    filter: drop-shadow(0 0 0.15rem gray);
+    margin-bottom: 5px;
+    border-radius: 15px;
+    margin: 0px 0px 0px 0px;
+}
+div.cards3BotPart2 p {
+    position: relative;
+    font-size: 13px;
+    font-weight: bold;
+    padding: 10px;
 }
 div.imgDuo4 {
     width: 100%;
@@ -527,6 +564,7 @@ footer.basDePage {
     background-color: gray;
     grid-area: basDePage;
     display: flex;
+    margin-top: 20px;
 }
 footer.basDePage a {
     text-decoration: none;
