--- a/css/style.css
+++ b/css/style.css
@@ -790,6 +790,7 @@ div.footInfo {
         margin: 0px;
     }
     div.cards3Solo {
+        background-color: aquamarine;
         flex-direction: column;
         width: 100%;
         height: 150px;
@@ -804,12 +805,8 @@ div.footInfo {
         display: flex;
         width: 100%;
     }
-    div.cards3Top p {
-        padding: 0px 0px 0px 0px;
-        position: relative;
-        top: 0px;
-        padding-left: 5px;
-    }
+    div.c {
+
     div.artcile3 {
         flex-direction: column;
         width: 95%;
