--- a/css/style.css
+++ b/css/style.css
@@ -446,13 +446,13 @@ div.cards3Top:hover {
     filter:drop-shadow(1px 1px 1px black);
 }
 div.imgDuo1 {
-    object-fit: cover;
+    width: 100%;
     height: 115px;
 }
 div.imgDuo1 img {
-    object-fit: cover;
     width: 100%;
-    height: 100px;
+    height: 150px;
+    object-fit: cover;
     border-radius: 15px;
     border-radius: 15px 15px 0px 0px;
 }
@@ -493,7 +493,6 @@ div.imgDuo2 img {
     border-radius: 15px;
     border-radius: 15px 15px 0px 0px;
 }
-/*ARTICLE */
 div.artcile3Part2 {
     display: flex;
     justify-content: space-between;
@@ -740,17 +739,16 @@ div.footInfo {
         padding-right: 5px;
     }
     section.article1 {
+        background-color: unset;
         object-fit: cover;
     }
     div.artcile1Part1 {
         flex-direction: column;
     }
     div.artcile1Part2 {
-        background-color: forestgreen;
         flex-direction: column;
     }
     div.cards {
-        background-color: cyan;
         width: unset;
         object-fit: cover;
     }
@@ -761,13 +759,28 @@ div.footInfo {
         border-radius: 0px;
         margin: 0px;
     }
+    div.artcile2Title {
+        justify-content: space-between;
+    }
     div.cardsWithIcon {
         width: unset;
+        height: 150px;
+    }
+    div.cardsWithIcon h3 {
+        font-size: 20px;
+    }
+    div.cardsWithIcon p {
+        font-size: 15px;
     }
     div.cardDescripIcon {
-        background-color: deeppink;
         width: unset;
         height: 200px;
+    }
+    div.starEvaluation2 {
+        padding-top: 80px;
+    }
+    div.starEvaluation2Relou {
+        padding-top: 60px;
     }
     div.article2Img {
         width: 40%;
@@ -776,7 +789,6 @@ div.footInfo {
         border-radius: 15px 0 0 15px;
     }
     div.article2Img img{
-        background-color: crimson;
         width: 100%;
         height: 150px;
     }
@@ -787,26 +799,27 @@ div.footInfo {
     }
     div.artcile3Part1 {
         flex-direction: column;
-        margin: 0px;
     }
     div.cards3Solo {
-        background-color: aquamarine;
         flex-direction: column;
         width: 100%;
         height: 150px;
-        margin-top: 20px;
+    }
+    div.cards3SoloImg {
+        width: 100%;
     }
     div.cards3SoloImg img{
-        height: 100px;
-        object-fit: cover;
+        padding: 1px;
+        width: 100%;
+        height: 150px;
+        justify-content: space-evenly;
+        align-items: center;
     }
     div.artcile3Relou {
         margin: 0px 0px 0px 0px;
         display: flex;
         width: 100%;
     }
-    div.c {
-
     div.artcile3 {
         flex-direction: column;
         width: 95%;
@@ -816,28 +829,22 @@ div.footInfo {
         margin-top: 30px;
         margin-bottom: 30px;
     }
+    div.cards3BotPart2 {
+        height: 150px;
+        margin-bottom: 30px;
     }
     div.artcile3Part2 {
         flex-direction: column;
-        justify-content: center;
-        margin: 0px;
-        width: 100%;
+        width: 95%;
     }
     div.cards3TopPart2 {
         height: 150px;
         margin-top: 30px;
         margin-bottom: 30px;
     }
-    div.imgDuo3 img {
-        height: 100px;
-       object-fit: cover;
-    }
     div.cards3BotPart2 {
         height: 150px;
         margin-bottom: 30px;
-    }
-    div.imgDuo4 {
-        height: 100px;
     }
     /*BAD DE PAGE*/
     footer.basDePage {
